# processor

./: .gitignore  CMakeLists.txt  Makefile  README.md
assembler/: Makefile  asm.txt  assFunctions.cpp  assFunctions.h  assembler.cpp  assembler.h  code.txt
assembler/code+asm/: asm.txt  code.txt
assembler/examples/: code.asm  rec.asm  square.asm
buildAsm/debug/: assembler.out
buildAsm/release/: assembler.out
disassembler/: disassembler.cpp  disassemblerCmds.cpp  disassemblerCmds.h
disassembler/examples/: disasm.asm  squareDis.asm
examples/: bebra.dis  operativka.asm  operativkaDis.asm  rec.dis  square.dis
headers/assembler/: assemblerCmds.h
headers/disassembler/: disassemblerCmds.h
headers/fileInputTreatment/: fileInputTreatment.h
headers/processor/: processorCmds.h
headers/sort/: sort.h
headers/stackFunctions/: stackFunctions.h
headers/strlibMy/: strlibMy.h
headers/ultimateGuard/: ultimateGuard.h
lib/: onegin.cpp  stack.cpp
lib/MistakeHandling/: myAssert.h
lib/SortingAlg/: sort.cpp  sort.h
lib/StrFuncs/: strlibMy.cpp  strlibMy.h
lib/commands/: commands.h
lib/fileInput/: fileInputTreatment.cpp  fileInputTreatment.h
lib/guard/: ultimateGuard.cpp  ultimateGuard.h
lib/logs/: log.txt
lib/stackFuncs/: assembler.h  stackFunctions.cpp  stackFunctions.h
logs/: log.txt
processor/: processor.cpp  processorCmds.cpp  processorCmds.h
source/: CMakeLists.txt
source/assembler/: CMakeLists.txt  assemblerCmds.cpp
source/disassembler/: CMakeLists.txt  Makefile  cmake_install.cmake  disassemblerCmds.cpp
source/fileInputTreatment/: CMakeLists.txt  Makefile  fileInputTreatment.cpp
source/processor/: CMakeLists.txt  Makefile  processorCmds.cpp
source/sort/: CMakeLists.txt  Makefile  cmake_install.cmake  sort.cpp
source/stackFunctions/: CMakeLists.txt  Makefile  cmake_install.cmake  stackFunctions.cpp
source/strlibMy/: CMakeLists.txt  Makefile  strlibMy.cpp
source/ultimateGuard/: CMakeLists.txt  ultimateGuard.cpp
tools/: CMakeLists.txt
tools/assembler/: CMakeLists.txt
tools/assemblerExec/: CMakeLists.txt  assembler.cpp
tools/disassembler/: CMakeLists.txt
tools/disassemblerExec/: disassembler.cpp
tools/processor/: CMakeLists.txt
tools/processorExec/: processor.cpp
